Semi functional d3-only approach

--- a/ioos_catalog/static/css/map-style.css
+++ b/ioos_catalog/static/css/map-style.css
@@ -2,7 +2,16 @@
   cursor: pointer;
 }
 
+svg #geo {
+  fill: #ccc;
+  stroke: #ddd;
+}
+
+svg {
+}
+
 #map {
+  background-color: #666;
   position: fixed;
   top: 0px;
   bottom: 0px;
