--- a/ioos_catalog/templates/asset_map.html
+++ b/ioos_catalog/templates/asset_map.html
@@ -29,7 +29,8 @@
 <svg id="shared"></svg>
 
 
-<script type="text/javascript" src="{{ url_for('.static', filename='js/d3.v3.min.js') }}" /></script>
+<!--<script type="text/javascript" src="{{ url_for('.static', filename='js/d3.v3.min.js') }}" /></script>-->
+<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script type="text/javascript" src="{{ url_for('.static', filename='js/queue.v1.min.js') }}" /></script>
 <script type="text/javascript" src="{{ url_for('.static', filename='js/d3.geo.projection.v0.min.js') }}" /></script>
 <script type="text/javascript" src="{{ url_for('.static', filename='js/d3.geo.zoom.js') }}" /></script>
@@ -90,14 +91,20 @@ var root = d3.select('#map');
 var margin=10;
 
 // @TODO: browser resize
-var width = Math.max(960, window.innerWidth),
+var width = Math.max(960, window.innerWidth * 0.7),
     height = Math.max(500, window.innerHeight);
 
-var projection = d3.geo.azimuthalEqualArea()
+var projection = d3.geo.orthographic()
   .scale((1 << 12) / 2 / Math.PI)
   .translate([width/2, height/2])
-  //.clipAngle(null)
+  .clipAngle(90)
   .rotate([110, -34, -5])
+  ;
+
+var smallProjection = d3.geo.mercator()
+  .scale(60)
+  .translate([64, 64])
+  .rotate([100, -50])
   ;
 
 var center = projection([-100, 40])
@@ -114,21 +121,19 @@ var graticule = d3.geo.graticule()
   .extent([[-180, 0], [0, 90]])
   .step([3, 3]);
 
-root.append("path")
-  .datum(graticule)
-  .attr("class", "graticule")
-  .attr("d", path);
-
-var vector = d3.select('#shared')
+var vector = root.append('path')
+  .attr('id', 'geo');
+  
+var baseshare = d3.select('#shared')
   .append("defs")
   .append("path")
-    .attr("id", "geo");
-
-root.append('use')
-  .attr('xlink:href', '#geo');
+    .attr("id", "basegeo");
 
 var path = d3.geo.path()
   .projection(projection);
+
+var smallPath = d3.geo.path()
+  .projection(smallProjection);
 
 var zoom = d3.geo.zoom()
   .projection(projection)
@@ -165,6 +170,15 @@ function zoomed() {
 d3.json("{{ url_for('.static', filename='geojson/ne_110m_land.geojson') }}", function (error, geojson) {
 //d3.json("{{ url_for('.static', filename='geojson/ne_110m_admin_0_countries_lakes.geojson') }}", function (error, geojson) {
   //root.call(zoom);
+
+  baseshare.datum(geojson)
+    .attr('d', smallPath);
+
+  root.append("path")
+    .datum(graticule)
+    .attr("class", "graticule")
+    .attr("d", path);
+
   vector
     .datum(geojson)
     .attr('d', path);
@@ -204,18 +218,16 @@ function addData(error, geojson) {
       .attr('width', 128)
       .attr('height', 128);
 
-      /*
     thumbs.append('use')
-      .attr('xlink:href', '#geo');
+      .attr('xlink:href', '#basegeo');
 
     thumbs.append('path')
       .attr('id', function(d) { return 'thumb_' + d.properties.id })
       .attr('class', 'dataset active')
-      .attr('d', path); 
+      .attr('d', smallPath); 
 
-    thumbs.attr('viewBox', '0 0 800 700');
-    thumbs.attr('preserveAspectRatio', 'xMidYMid slice');
-    */
+    //thumbs.attr('viewBox', '0 0 800 700');
+    //thumbs.attr('preserveAspectRatio', 'xMidYMid slice');
 
     var body = ps.append('div')
       .attr('class', 'media-body');
@@ -245,6 +257,11 @@ function addData(error, geojson) {
       toggleInfo(d.properties.id);
     });
 }
+
+$(function() {
+  $('select').val('SECOORA', true).trigger('change');
+
+});
 
 </script>
 
