--- a/ioos_catalog/static/css/map-style.css
+++ b/ioos_catalog/static/css/map-style.css
@@ -1,3 +1,11 @@
+#sidebar-toggle {
+  position: fixed;
+  z-index: 15;
+
+  left: 5px;
+  top: 5px;
+}
+
 #thumbnails li {
   cursor: pointer;
 }
@@ -37,6 +45,11 @@ svg {
 
 #map_sidebar #filters {
   height: 5%;
+}
+
+#map_sidebar #filters select {
+  margin-left: 20%;
+  width: 80%;
 }
 
 #map_sidebar #thumbnails {
