--- a/ioos_catalog/templates/asset_map.html
+++ b/ioos_catalog/templates/asset_map.html
@@ -6,6 +6,10 @@
 
 {% block basepage %}
 
+<button id="sidebar-toggle" class="btn btn-default">
+  <span class="glyphicon glyphicon-align-justify"></span>
+</button>
+
 <div id="map_infobar">
   <button id="show_geo" class="btn btn-lg btn-primary pull-right">
     <span class="glyphicon glyphicon-search"></span>
@@ -352,6 +356,27 @@ function addData(error, geojson) {
       toggleInfo(d.properties.id, d.properties.sindex);
     });
 }
+
+$('#sidebar-toggle').click(function() {
+  var map = $('#map');
+  if (map.css('left') == '0px') {
+    $('#map_sidebar').show();
+    $('#map_infobar').show();
+
+    map.animate({
+      'left': '30%',
+      'width': '70%'
+    }, 150);
+
+  } else {
+    $('#map_sidebar').hide();
+    $('#map_infobar').hide();
+    map.animate({
+      'left': '0px',
+      'width': '100%'
+    }, 150);
+  }
+});
 
 $(function() {
   $('select').val('SECOORA', true).trigger('change');
