--- a/ioos_catalog/static/css/map-style.css
+++ b/ioos_catalog/static/css/map-style.css
@@ -18,6 +18,14 @@
 svg {
 }
 
+svg path.dataset.perm-active {
+  fill: #E3B5B2;
+  fill-opacity: 0.6;
+  stroke: #8C2E19;
+  stroke-opacity: 0.6;
+  stroke-width: 1;
+}
+
 #map {
   background-color: #666;
   position: fixed;
@@ -62,6 +70,10 @@ svg {
   border: 1px dotted #666;
 }
 
+#map_sidebar #thumbnails .active {
+  background-color: #9fabb7;
+}
+
 #map_infobar {
   z-index: 5;
   position: fixed;
@@ -102,11 +114,12 @@ svg {
 }
 
 .media-grid svg {
+  margin: 5%;
   position: absolute;
   top: 0;
-  height: 100%;
+  height: 90%;
   left: 0;
-  width: 100%;
+  width: 90%;
 
 }
 
