--- a/ioos_catalog/templates/asset_map.html
+++ b/ioos_catalog/templates/asset_map.html
@@ -10,6 +10,12 @@
   <span class="glyphicon glyphicon-align-justify"></span>
 </button>
 
+<div id="branding">
+  <a href="/">
+    <img src="{{ url_for('.static', filename='img/ioos-white.gif')}}" alt="IOOS" />
+  </a>
+</div>
+
 <div id="map_infobar">
   <button id="show_geo" class="btn btn-lg btn-primary pull-right">
     <span class="glyphicon glyphicon-search"></span>
@@ -65,6 +71,7 @@
 </div>
 
 <div id="map_sidebar">
+
   <div id="filters">
     <select name="filter-provider" class="form-control">
       <option value="null">-</option>
