--- a/ioos_catalog/templates/asset_map.html
+++ b/ioos_catalog/templates/asset_map.html
@@ -111,8 +111,7 @@
 <svg id="shared"></svg>
 
 
-<!--<script type="text/javascript" src="{{ url_for('.static', filename='js/d3.v3.min.js') }}" /></script>-->
-<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+<script type="text/javascript" src="{{ url_for('.static', filename='js/d3.v3.min.js') }}" /></script>
 <script type="text/javascript" src="{{ url_for('.static', filename='js/queue.v1.min.js') }}" /></script>
 <script type="text/javascript" src="{{ url_for('.static', filename='js/d3.geo.projection.v0.min.js') }}" /></script>
 <script type="text/javascript" src="{{ url_for('.static', filename='js/d3.geo.zoom.js') }}" /></script>
