Polish info bar slightly

--- a/ioos_catalog/static/css/map-style.css
+++ b/ioos_catalog/static/css/map-style.css
@@ -89,6 +89,8 @@ svg path.dataset.perm-active {
   border-right: 5px solid #9fabb7;
   border-top: 5px solid #9fabb7;
   padding: 5px;
+  display: none;
+  overflow: auto;
 }
 
 /* can't specify w/h in source */
